added SystemUtils.OS_NAME to project_information prompt content, updated sonar-fix.toml, fix by gw:act sonar-fix.